--- a/helloweb03/src/main/webapp/WEB-INF/web.xml
+++ b/helloweb03/src/main/webapp/WEB-INF/web.xml
@@ -4,19 +4,22 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 	<display-name>helloweb03</display-name>
-	
-	
+
 	<!-- Dispatcher Servlet -->
 	<servlet>
 		<servlet-name>spring</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
+		<init-param>
+	      <param-name>contextConfigLocation</param-name>
+	      <param-value>/WEB-INF/spring-servlet.xml</param-value>
+	    </init-param>
 	</servlet>
-
+	
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
 
 
 	<welcome-file-list>
