--- a/container/pom.xml
+++ b/container/pom.xml
@@ -28,7 +28,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
-		
+		<!-- test -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
